# facetraits

./: README.md  pyproject.toml
facetraits/: __init__.py  analyzer.py  traits.py  utils.py
facetraits/traits/: __init__.py  brow_ridges.py
tests/: __init__.py  test_creating.py  test_vizualize.py
